Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.2.12
-
None
-
MariaDB-server on CentOS 7.4.
Description
mysqld crashes when issue mariabackup with option --innodb-flush-method
note :it's observed with all option values and also when run mariabackup with option --innodb-flush-method w/o value , all times it's returned Segmentation fault
--innodb-flush-method=fdatasync
| 0_DSYNC |
| 0_DIRECT |
| 0_DIRECT_NO_FSYNC |
| ALL_0_DIRECT |
- mariabackup -u root --backup --target-dir /var/mariadb/backup1 --innodb-flush-method=0_DIRECT_NO_FSYNC
180119 13:50:39 Connecting to MySQL server host: localhost, user: root, password: not set, port: not set, socket: not set
Using server version 10.2.12-MariaDB
mariabackup based on MariaDB server 10.2.12-MariaDB Linux (x86_64)
mariabackup: uses posix_fadvise().
mariabackup: cd to /var/lib/mysql/
mariabackup: open files limit requested 0, set to 1024
mariabackup: using the following InnoDB configuration:
mariabackup: innodb_data_home_dir = .
mariabackup: innodb_data_file_path = ibdata1:12M:autoextend
mariabackup: innodb_log_group_home_dir = ./
mariabackup: Unrecognized value 0_DIRECT_NO_FSYNC for innodb_flush_method
180119 13:50:39 [ERROR] mysqld got signal 11 ;
This could be because you hit a bug. It is also possible that this binary
or one of the libraries it was linked against is corrupt, improperly built,
or misconfigured. This error can also be caused by malfunctioning hardware.
To report this bug, see https://mariadb.com/kb/en/reporting-bugs
We will try our best to scrape up some info that will hopefully help
diagnose the problem, but since we have already crashed,
something is definitely wrong and this may fail.
Server version: 10.2.12-MariaDB
key_buffer_size=0
read_buffer_size=131072
max_used_connections=0
max_threads=1
thread_count=0
It is possible that mysqld could use up to
key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 5420 K bytes of memory
Hope that's ok; if not, decrease some variables in the equation.
Thread pointer: 0x0
Attempting backtrace. You can use the following information to find out
where mysqld died. If you see no messages after this, something went
terribly wrong...
stack_bottom = 0x0 thread_stack 0x49000
addr2line: 'mariabackup': No such file
mariabackup(my_print_stacktrace+0x2e)[0x5560b1c6105e]
mariabackup(handle_fatal_signal+0x355)[0x5560b174c345]
/lib64/libpthread.so.0(+0xf5e0)[0x7f6eca2265e0]
mariabackup(+0x8c560f)[0x5560b191560f]
mariabackup(+0x8d577f)[0x5560b192577f]
mariabackup(+0xa3f7c5)[0x5560b1a8f7c5]
mariabackup(+0x4543c0)[0x5560b14a43c0]
mariabackup(main+0x185)[0x5560b1483575]
/lib64/libc.so.6(__libc_start_main+0xf5)[0x7f6ec871fc05]
mariabackup(+0x44ca2d)[0x5560b149ca2d]
The manual page at http://dev.mysql.com/doc/mysql/en/crashing.html contains
information that should help you find out what is causing the crash.
Segmentation fault (core dumped)