MDEV-14997 mariabackup crashes with invalid --innodb-flush-method

Avoid NULL pointer dereference when shutting down after invalid parameters
were parsed.